Тест: билд нативного изображения