@@ -1,9 +1,11 @@
 plugins {
-	id 'org.jetbrains.kotlin.jvm' version '2.3.20'
-	id 'org.jetbrains.kotlin.plugin.spring' version '2.3.20'
-	id 'org.springframework.boot' version '4.1.0-M4'
-	id 'io.spring.dependency-management' version '1.1.7'
-	id 'com.google.cloud.tools.jib' version '3.5.3'
+	id 'org.jetbrains.kotlin.jvm'               version '2.3.20'
+	id 'org.jetbrains.kotlin.plugin.spring'      version '2.3.20'
+
+	id 'org.springframework.boot'                version '4.1.0-M4'
+	id 'io.spring.dependency-management'         version '1.1.7'
+	id 'org.graalvm.buildtools.native'           version '0.10.6'
+	id 'com.google.cloud.tools.jib'              version '3.5.3'
 }
 
 group = 'org.niikage'
@@ -17,9 +19,11 @@ java {
 
 repositories {
 	mavenCentral()
+	maven { url 'https://repo.spring.io/milestone' }
 }
 
 dependencies {
+	// SPRING BOOT
 	implementation 'org.springframework.boot:spring-boot-starter-amqp'
 	implementation 'org.springframework.boot:spring-boot-starter-cache'
 	implementation 'org.springframework.boot:spring-boot-starter-data-r2dbc'
@@ -29,34 +33,42 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
+
+	// KOTLIN / REACTOR
 	implementation 'io.projectreactor.kotlin:reactor-kotlin-extensions'
-	implementation 'org.flywaydb:flyway-database-postgresql'
-	implementation 'org.apache.commons:commons-pool2'
-	implementation 'com.bucket4j:bucket4j-core:8.10.1'
-	implementation 'org.springdoc:springdoc-openapi-starter-webflux-ui:3.0.3'
 	implementation 'org.jetbrains.kotlin:kotlin-reflect'
 	implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-reactor'
-	implementation 'org.springframework:spring-jdbc'
 	implementation 'tools.jackson.module:jackson-module-kotlin'
-	implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
-	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
-	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'
-	developmentOnly 'org.springframework.boot:spring-boot-devtools'
+
+	// DATABASE
+	implementation 'org.flywaydb:flyway-database-postgresql'
+	implementation 'org.apache.commons:commons-pool2'
+	implementation 'org.springframework:spring-jdbc'
 	runtimeOnly 'org.postgresql:postgresql'
 	runtimeOnly 'org.postgresql:r2dbc-postgresql'
+
+	// JWT
+	implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
+	runtimeOnly   'io.jsonwebtoken:jjwt-impl:0.12.6'
+	runtimeOnly   'io.jsonwebtoken:jjwt-jackson:0.12.6'
+
+	// RATE LIMITING
+	implementation 'com.bucket4j:bucket4j-core:8.10.1'
+
+	// OPENAPI / SWAGGER
+	implementation 'org.springdoc:springdoc-openapi-starter-webflux-ui:3.0.3'
+	implementation 'org.springdoc:springdoc-openapi-starter-common:3.0.3'
+
+	// DEV / BUILD
+	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
-	testImplementation 'org.springframework.boot:spring-boot-starter-amqp-test'
-	testImplementation 'org.springframework.boot:spring-boot-starter-cache-test'
-	testImplementation 'org.springframework.boot:spring-boot-starter-data-r2dbc-test'
-	testImplementation 'org.springframework.boot:spring-boot-starter-data-redis-reactive-test'
-	testImplementation 'org.springframework.boot:spring-boot-starter-flyway-test'
-	testImplementation 'org.springframework.boot:spring-boot-starter-r2dbc-test'
+
+	// TESTS
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.boot:spring-boot-starter-security-test'
-	testImplementation 'org.springframework.boot:spring-boot-starter-validation-test'
-	testImplementation 'org.springframework.boot:spring-boot-starter-webflux-test'
 	testImplementation 'org.jetbrains.kotlin:kotlin-test-junit5'
 	testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test'
-	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+	testRuntimeOnly    'org.junit.platform:junit-platform-launcher'
 }
 
 kotlin {
@@ -65,25 +77,45 @@ kotlin {
 	}
 }
 
+// GRAALVM NATIVE
+graalvmNative {
+	binaries {
+		main {
+			imageName = 'planr'
+
+			buildArgs.addAll(
+					'--no-fallback',
+					'--initialize-at-build-time=org.slf4j',
+					'-H:IncludeLocales=en,ru',
+					'--gc=serial',
+					'-O2'
+			)
+		}
+	}
+}
+
+// JIB
 jib {
 	from {
 		image = "eclipse-temurin:25-jre-alpine"
 	}
 	to {
 		image = "ghcr.io/lifernod/planr"
-		tags = ["latest"]
+		tags  = ["latest-jvm"]
 	}
 	container {
 		jvmFlags = [
 				"-XX:+UseZGC",
+				"-XX:+ZGenerational",
 				"-Xms128m",
 				"-Xmx384m",
 				"-XX:+UseContainerSupport",
 				"-XX:CICompilerCount=2",
 				"-XX:ZUncommitDelay=30",
-				"-XX:+ZUncommit"
+				"-XX:+ZUncommit",
+				"-Dspring.profiles.active=prod"
 		]
-		ports = ["8080"]
-		creationTime = "USE_CURRENT_TIMESTAMP"
+		ports          = ["8080"]
+		creationTime   = "USE_CURRENT_TIMESTAMP"
 	}
 }
